Fix weird input lag on mobile safari

--- a/client/css/irc.css
+++ b/client/css/irc.css
@@ -7,6 +7,26 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: Helvetica, sans-serif; }
 
+input.form-control-two {
+  -webkit-appearance: none; }
+  @media only screen and (min-width: 768px) {
+    input.form-control-two {
+      outline: none; } }
+
+.form-control-two {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857;
+  color: #555555;
+  vertical-align: middle;
+  background-color: white;
+  border-radius: 4px;
+  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
+
 .tooltip {
   transform: translate(0px, 5px);
   transition: transform ease-in-out 0.15s; }
